lab1/Test/L1-A-9-16.cmm
struct YkCZH7xBDsOm {
  float RH6WxecuyEcM = _CVqzoiQGB5ezIL5G7nW = Vtx8Z8 
    && == ziTzCfs / - jyw5NLgHfR_dQJ3xYI0 [ wdCL || Gfml69fjcikLYFrE 
    <= K + z6yW3mpnq_NBi ( pk , PYl5XK84hsPpvo * - ! ( 
    ymV || X9ql9TBryOUP_osR != uDH90FtOKRsWy5Ck1Ho - DJG6mwm1qO 
    / ! oFdw ( LfxzpJI7al0VQj8D8tb > NYyDox_6J_7UE9d_z 
    - ! ( NIIp >= tplYOHNRr / SfNjLKvpZrdBmlaC3 ( _7V4 
    || yPZo8 < MTOLlLCYg7Qxy_wcX ) ) + 1855154405 ) ) 
    + 1373420396.1075621712 ) . pdzzhCZgnj_UHSY ] * ! 
    hR7Jr04PEIqbjHIQ3 ( ) - - Uy , rlQGyZ0Xun37Tc7fAI 
    [ 751131349 ] ;
};
int wZyH85OILcdROV9 
;
int ;
int hJcz5p ( ) {
  if ( _F7 )   if eXt0g )   i ;
else {
    while ( rLtR1kDO_E )     PU ;

  }
else   if ( rl8KqgwUu_yNSu6VCKm )   return ZtQq_wG9JeN7NZ_e 
    ;


}
int HG5l4biBUm72Ul_ , fkN6n82Gl7Cu 

;
int zNWeaIoj2C2f_tfpR42o ( int RKLymM struct {
  int k9RVLcMU ;
}rvFF1Oe_uJ3n5 ) {
  int SnoKF ;
  struct qlKtltMVsUeIDt5r tj_CXsAP_owEUXr0hfT ;
}
